# wgatask

./: README.md
src/: CMakeLists.txt  Data.cpp  Data.h  EventHandler.cpp  EventHandler.h  Field.cpp  Field.h  Game.cpp  Game.h  InterfaceDrawer.cpp  InterfaceDrawer.h  InterfaceHandler.cpp  InterfaceHandler.h  event.h  main.cpp
